--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,10 +4,10 @@ artifacts_root: artifacts
 
 data_ingestion:
   root_dir: artifacts/data_ingestion
-  source_URL: https://github.com/entbappy/Branching-tutorial/raw/master/Chicken-fecal-images.zip
+  source_URL: https://github.com/REVANTH-PORTFOLIO/DATA/raw/refs/heads/main/chicken_images%20.zip
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
-
+  
 
 
 prepare_base_model:
